double scroll and margin filter fixed

--- a/src/app/main/accounts/home/accounts-home.component.scss
+++ b/src/app/main/accounts/home/accounts-home.component.scss
@@ -1,3 +1,7 @@
+.application-layout-content-wrapper{
+  padding: 12px;
+}
+
 .list-accounts .mat-card,
 .mat-sidenav-filters .accounts-filters {
   border: 1px solid #dddddd;
@@ -18,7 +22,7 @@
     }
 
     .accounts-filters {
-      padding: 6px 33px;
+      padding: 33px 33px;
 
       .label-balance {
         font-size: 14px;
